# windows-runtime

./: .gitmodules  CONTRIBUTING.md  README.md  package.json
Source/: CMakeLists.txt  WebKit.cmake
Source/Metadata/: BaseClassDeclaration.cpp  BaseClassDeclaration.h  CMakeLists.txt  ClassDeclaration.cpp  ClassDeclaration.h  ComHelpers.cpp  ComHelpers.h  Declaration.cpp  Declaration.h  DeclarationFactory.cpp  DeclarationFactory.h  DeclaringInterfaceForMethod.cpp  DeclaringInterfaceForMethod.h  DelegateDeclaration.cpp  DelegateDeclaration.h  EnumDeclaration.cpp  EnumMemberDeclaration.cpp  EventDeclaration.cpp  EventDeclaration.h  FieldDeclaration.cpp  FieldDeclaration.h  GenericInstanceIdBuilder.cpp  GenericInstanceIdBuilder.h  InterfaceDeclaration.cpp  InterfaceDeclaration.h  IteratorRange.h  Metadata-Prefix.cpp  MetadataReader.cpp  MetadataReader.h  MethodDeclaration.cpp  MethodDeclaration.h  NamespaceDeclaration.cpp  ParameterDeclaration.cpp  ParameterDeclaration.h  PropertyDeclaration.cpp  PropertyDeclaration.h  Signature.cpp  Signature.h  StructDeclaration.cpp  StructDeclaration.h  (+5 more)
Source/Metadata/Declarations/: BaseClassDeclaration.cpp  BaseClassDeclaration.h  ClassDeclaration.cpp  ClassDeclaration.h  Declaration.cpp  Declaration.h  DelegateDeclaration.cpp  DelegateDeclaration.h  EnumDeclaration.cpp  EnumDeclaration.h  EnumMemberDeclaration.cpp  EnumMemberDeclaration.h  EventDeclaration.cpp  EventDeclaration.h  FieldDeclaration.cpp  FieldDeclaration.h  InterfaceDeclaration.cpp  InterfaceDeclaration.h  MethodDeclaration.cpp  MethodDeclaration.h  NamespaceDeclaration.cpp  NamespaceDeclaration.h  ParameterDeclaration.cpp  ParameterDeclaration.h  PropertyDeclaration.cpp  StructDeclaration.cpp  StructDeclaration.h  StructFieldDeclaration.cpp  StructFieldDeclaration.h  TypeDeclaration.cpp  TypeDeclaration.h
Source/Metadata/Types/: ArrayType.h  ElementType.h  GenericParameterType.h  ReferenceType.h  SimpleType.h  Type.h  Types.h
Source/Metadata/Wrappers/: IteratorRange.h  Noncopyable.h
Source/NativeScript/: .gitignore  NativeScript.sln
Source/NativeScript/NativeScript.Metadata/: Ast.h  BaseClassDeclaration.cpp  BaseClassDeclaration.h  ClassDeclaration.DeclaringInterfaceForMethod.cpp  ClassDeclaration.cpp  ClassDeclaration.h  ComHelpers.cpp  ComHelpers.h  Declaration.cpp  Declaration.h  DeclaringInterfaceForMethod.cpp  DelegateDeclaration.cpp  DelegateDeclaration.h  EnumDeclaration.cpp  EnumDeclaration.h  EnumMemberDeclaration.cpp  EnumMemberDeclaration.h  EventDeclaration.cpp  EventDeclaration.h  FieldDeclaration.cpp  FieldDeclaration.h  InterfaceDeclaration.cpp  InterfaceDeclaration.h  IteratorRange.h  Metadata.cpp  Metadata.h  MetadataDeclaration.cpp  MetadataDeclaration.h  MetadataReader.cpp  MetadataReader.h  MethodDeclaration.cpp  MethodDeclaration.h  NamespaceDeclaration.cpp  NamespaceDeclaration.h  NativeScript.Metadata.vcxproj  NativeScript.Metadata.vcxproj.filters  ParameterDeclaration.cpp  ParameterDeclaration.h  PropertyDeclaration.cpp  PropertyDeclaration.h  (+7 more)
Source/NativeScript/NativeScript.TestApp/: App.cpp  App.h  Main.cpp  NativeScript.TestApp.vcxproj  NativeScript.TestApp.vcxproj.filters  Package.appxmanifest  pch.h
Source/NativeScript/NativeScript.Tests/: ClassesTests.cpp  DelegatesTests.cpp  EnumsTests.cpp  EventsTests.cpp  InterfacesTests.cpp  MarshalingTests.cpp  MetadataTests.cpp  NamespacesTests.cpp  NativeScript.Tests.vcxproj  NativeScript.Tests.vcxproj.filters  OverloadsTests.cpp  Package.appxmanifest  StructsTests.cpp  pch.h
Source/NativeScript/NativeScript.Tests.Fixtures/: Class1.cs  Classes.cs  Delegates.cs  Enums.cs  Events.cs  Interfaces.cs  Marshaling.cs  Namespaces.cs  NativeScript.Tests.Fixtures.csproj  Overloads.cs  Structs.cs
Source/NativeScript/NativeScript.Tests.Fixtures/Properties/: AssemblyInfo.cs
Source/Runtime/: CMakeLists.txt  GlobalObject.cpp  GlobalObject.h  ReleasePool.h  Runtime-Prefix.cpp  Runtime-Prefix.h  Runtime.cpp  Runtime.h  main.cpp  pch.h
Source/Runtime/COM/: COMConstructor.cpp  COMConstructor.h  COMInterop.cpp  COMInterop.h  COMMethodCall.cpp  COMMethodCall.h  COMObjectMap.h  COMObjectWrapper.cpp  COMObjectWrapper.h  COMUnknownType.cpp  COMUnknownType.h  HSTRINGType.cpp  HSTRINGType.h
Source/Runtime/FFI/: FFIBooleanType.h  FFIInterop.cpp  FFIInterop.h  FFINumberType.h  FFISimpleType.h  FFIType.h  FFIVoidType.cpp  FFIVoidType.h
Source/TestFixtures/: Classes.cs  Delegates.cs  Enums.cs  Events.cs  Interfaces.cs  Marshaling.cs  Namespaces.cs  Overloads.cs  Structs.cs  TestFixtures.csproj  project.json
Source/TestFixtures/Properties/: AssemblyInfo.cs
Source/TestRunner/: App.cpp  App.h  CMakeLists.txt  Main.cpp  TestRunner-Prefix.cpp
Source/TestRunner/app/: index.js
Source/TestRunner/app/jasmine/jasmine-2.0.1/: jasmine.js
Source/Tools/: EmbedResourceInHeader.py
Source/UnitTests/: .gitignore  CMakeLists.txt  ClassesTests.cpp  DelegatesTests.cpp  EnumsTests.cpp  EventsTests.cpp  InterfacesTests.cpp  Main.cpp  MarshalingTests.cpp  NamespacesTests.cpp  OverloadsTests.cpp  Package.appxmanifest  Package_WindowsPhone.appxmanifest  Package_WindowsStore.appxmanifest  StructsTests.cpp  UnitTests-Prefix.cpp  pch.h
Source/UnitTests/MetadataTests/: ClassesTests.cpp  DelegatesTests.cpp  EnumsTests.cpp  EventsTests.cpp  InterfacesTests.cpp  MarshalingTests.cpp  NamespacesTests.cpp  OverloadsTests.cpp  StructsTests.cpp
Source/cmake/: GroupSources.cmake  Package.appxmanifest.in  Package_WindowsPhone.appxmanifest.in  Package_WindowsStore.appxmanifest.in  PrecompiledHeaders.cmake
Source/libffi/: CMakeLists.txt  README.md  closures.c  dlmalloc.c  ffi.c  ffi.h  libffi.vcxproj  libffi.vcxproj.filters
Source/libffi/ARM/: ffi.c  kxarmunw.h  win32.asm
Source/libffi/libffi.Shared/: closures.c  dlmalloc.c  ffi_common.h  fficonfig.h  ffitarget.h  libffi.Shared.vcxitems  libffi.Shared.vcxitems.filters
Source/libffi/libffi.Shared/ARM/: ffi.c  ffitarget.h  kxarm.h
Source/libffi/libffi.Shared/x86/: win32.asm
Source/libffi/libffi.Windows/: libffi.vcxproj
Source/libffi/libffi.WindowsPhone/: libffi.vcxproj
(+36 files in other folders)
